--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&family=Roboto:wght@100;300&display=swap"
       rel="stylesheet"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&display=swap" rel="stylesheet">
     <title>Jessie Clements</title>
   </head>
   <body>
